# hogwildcli

./: README.md  install.bat  install.sh  pyproject.toml
docs/: ADDING-SKILLS.md  ARCHITECTURE.md  COMMANDS.md
skills/uxr-annotator/: SKILL.md
skills/uxr-cdnotes/: SKILL.md
skills/uxr-cohort-delta/: SKILL.md
skills/uxr-contradiction/: SKILL.md
skills/uxr-controller/: SKILL.md
skills/uxr-controller/references/: config-reference.md
skills/uxr-debriefer/: SKILL.md
skills/uxr-delta/: SKILL.md
skills/uxr-evaluator/: SKILL.md
skills/uxr-evaluator/references/: failure-taxonomy.md  pass-criteria.md
skills/uxr-extractor/: SKILL.md
skills/uxr-extractor/references/: failure-taxonomy.md
skills/uxr-grounding/: SKILL.md
skills/uxr-labeler/: SKILL.md
skills/uxr-narrator/: SKILL.md
skills/uxr-narrator/references/: narrative-framework.md
skills/uxr-ontology/: SKILL.md
skills/uxr-preprocessor/: SKILL.md
skills/uxr-synthesizer/: SKILL.md
skills/uxr-terminology/: SKILL.md
src/hogwild_uxr/: __init__.py  config.py  errors.py  provenance.py  sandbox.py  server.py  state.py
src/hogwild_uxr/tools/: artifact_io.py  labeling_io.py  lifecycle.py  preprocessing.py  state_io.py  synthesis_io.py
tests/: smoke_test.py
